-converting dtos to records
-modernise code to user type inference

-adding sealed classes

-Added optional class to avoid null pointer